--- a/style.css
+++ b/style.css
@@ -6,3 +6,105 @@ body {
     font-family: 'Poppins', sans-serif;
 
 }
+
+h1 {
+
+    font-size: 50px;
+
+}
+
+h2 {
+
+    font-size: 40px;
+
+}
+
+.orange-color {
+
+    color: orange;
+
+}
+
+.flexible-container {
+
+    display: flex;
+    margin-bottom: 150px;
+
+}
+
+.half-width {
+
+    width: 50%;
+    padding-left: 5%;
+
+}
+
+.half-width img {
+
+    width: 80%;
+
+}
+
+.anchor-button {
+
+    text-decoration: none;
+    background: linear-gradient(orange,lightblue);
+    padding: 10px 40px;
+    border-radius: 5px;
+    font-weight: 700;
+    color: white;
+
+
+}
+
+.top-banner {
+
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
+
+}
+
+.dream {
+
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+.experience-area {
+
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+.experience-item {
+
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+
+}
+
+#full-stack {
+
+    border-left: 7px solid tomato;
+
+}
+
+#baby-web {
+
+    border-left: 7px solid black;
+
+}
+
+footer p {
+
+    text-align: center;
+
+}
