--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ h2 {
 
 }
 
-.orange-color {
+.top-banner {
 
-    color: orange;
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
 
 }
 
@@ -39,72 +40,19 @@ h2 {
 
 }
 
-.half-width img {
+.color {
 
-    width: 80%;
+    color: orange;
 
 }
 
 .anchor-button {
 
     text-decoration: none;
-    background: linear-gradient(orange,lightblue);
+    background: linear-gradient(red,tomato);
     padding: 10px 40px;
-    border-radius: 5px;
-    font-weight: 700;
     color: white;
-
-
-}
-
-.top-banner {
-
-    background-image: url(img/top-banner.png);
-    background-repeat: no-repeat;
-
-}
-
-.dream {
-
-    background-image: url(img/top-banner.png);
-    background-repeat: no-repeat;
-    background-position: left;
-
-}
-
-.experience-area {
-
-    background-image: url(img/top-banner.png);
-    background-repeat: no-repeat;
-    background-position: left;
-
-}
-
-.experience-item {
-
-    width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-left: 20px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 40px gray;
-
-}
-
-#full-stack {
-
-    border-left: 7px solid tomato;
-
-}
-
-#baby-web {
-
-    border-left: 7px solid black;
-
-}
-
-footer p {
-
-    text-align: center;
+    font-weight: 700;
+    border-radius: 5px;
 
 }
