--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
 
-    font-size: 50px;
+    font-size: 40px;
 
 }
 
@@ -54,5 +54,48 @@ h2 {
     color: white;
     font-weight: 700;
     border-radius: 5px;
+
+}
+
+.half-width img {
+
+    width: 80%;
+
+}
+
+.experience-area {
+
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+.experience-item {
+
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px rgb(121, 32, 32);
+
+}
+
+#full-stack {
+
+    border-left: 7px solid gray;
+
+}
+
+#baby-web {
+
+    border-left: 7px solid tomato;
+
+}
+
+footer p {
+
+    text-align: center;
 
 }
